syntax = "proto3";
package bluzelle.curium.nft;

// this line is used by starport scaffolding # proto/tx/import

option go_package = "github.com/bluzelle/curium/x/nft/types";

// Msg defines the Msg service.
service Msg {
    // this line is used by starport scaffolding # proto/tx/rpc
  rpc CreateNft(MsgCreateNft) returns (MsgCreateNftResponse);
  rpc UpdateNft(MsgUpdateNft) returns (MsgUpdateNftResponse);
  rpc DeleteNft(MsgDeleteNft) returns (MsgDeleteNftResponse);
}

// this line is used by starport scaffolding # proto/tx/message
message MsgCreateNft {
  string creator = 1;
  string mime = 2;
  string meta = 3;
  string id = 4;
}

message MsgCreateNftResponse {
  string id = 1;
}

message MsgUpdateNft {
  string creator = 1;
  string id = 2;
  string mime = 3;
  string meta = 4;
}

message MsgUpdateNftResponse { }

message MsgDeleteNft {
  string creator = 1;
  string id = 2;
}

message MsgDeleteNftResponse { }
